--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- --------- FAVICON ---------- -->
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
 
-    <title>Portfolio | Ludiflex</title>
+    <title>Thoaiqh-CV</title>
 </head>
 <body>
    <div class="container">
